--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #A07855FF;
+    background-color: rgba(189, 116, 6, 0.979);
 }
 
 .title{
@@ -14,6 +14,7 @@ body{
     height: auto;
     
 }
+
 div{
     font-family: 'Courier New', Courier, monospace;
     font-size : 25px;
@@ -24,4 +25,23 @@ div{
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     
+}
+.description{
+    font-size: 35px;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    color: rgb(255, 255, 255);
+}
+
+.sides{
+    font-size: 25px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: left;
+    color: azure;
+}
+.rem{
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: left;
+    color: azure;
 }
